force-app/main/default/objects/Interface_Log__c/Interface_Log__c.object-meta.xml
<CustomObject>
    <description>Object to track details of external API Callout from salesforce and Log details for callout or errors in related lines.</description>
    <label>Interface Log</label>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Interface Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>