force-app/main/default/objects/Interface_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Name of operation from which log has been created. (i.e. Account MYS Sync)</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>