force-app/main/default/objects/Interface_Log__c/fields/Error_Lines__c.field-meta.xml
<CustomField>
    <fullName>Error_Lines__c</fullName>
    <description>Number of error line for log.</description>
    <label>Error Lines</label>
    <summaryForeignKey>Interface_Error_Line__c.Interface_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>