force-app/main/default/objects/Interface_Log__c/fields/Log_Lines__c.field-meta.xml
<CustomField>
    <fullName>Log_Lines__c</fullName>
    <description>Count of Successful logs under Interface Log Lines object.</description>
    <label>Log Lines</label>
    <summaryForeignKey>Interface_Log_Line__c.Interface_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>