force-app/main/default/objects/Interface_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <description>Type of log. (i.e. MYS Sync error log)</description>
    <label>Log Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>